Closed Bug 1614786 Opened 4 years ago Closed 4 years ago

‘getFIPSEnv’ defined but not used compilation error

Categories

(NSS :: Build, defect, P1)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: grover, Unassigned)

Details

Fix for bug 1582169 causes build to fail.

(I had to pull a fresh copy of the repo for this to show up, not sure why it didn't show up without doing this)

see build output

Sorry about this; I let this one slip by this morning. Fix landing.

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.51
You need to log in before you can comment on or make changes to this bug.